<resources>
    <!--    App Name-->
    <string name="app_name">Guess The Car Game</string>
    <!--    Screen Headers-->
    <string name="app_menu">Main Menu</string>
    <string name="text_view_select_image">Select the CORRECT image of : </string>
    <string name="text_view_points">POINTS</string>
    <!--    Buttons-->
    <string name="btn_car_make">Identify The Car Make</string>
    <string name="btn_hints"> Hints </string>
    <string name="btn_car_image">Identify The Car Image</string>
    <string name="btn_advance_level">Advance Level</string>
    <string name="btn_identify">Identify</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_ok">OK</string>
    <string name="btn_submit">Submit</string>
    <!--    Image Description-->
    <string name="image_random_load_make">Random Image Loader - Car Make Screen</string>
    <string name="imageView_select_1">Select Random Image - Car Image Screen</string>
    <string name="imageView_select_2">Select Random Image - Car Image Screen</string>
    <string name="imageView_select_3">Select Random Image - Car Image Screen</string>
    <string name="imageView_random_1">Load Random Image - Advance Screen</string>
    <string name="imageView_random_2">Load Random Image - Advance Screen</string>
    <string name="imageView_random_3">Load Random Image - Advance Screen</string>
    <string name="imageView_gamelogo">Game Logo</string>
    <!--    Drop Down Spinner-->
    <string-array name="planets_array">
    </string-array>
    <!--    Toast Messages-->
    <string name="toast_message_correct">CORRECT!</string>
    <string name="toast_message_wrong">WRONG!</string>
    <!--    Input Text-->
    <string name="input_message">Car Make</string>
    <!--    Switch Text-->
    <string name="switch_text">Timer</string>
    <!--    Hint Text-->
    <string name="hint_1">Enter Here</string>
    <string name="hint_2">Enter Here</string>
    <string name="hint_3">Enter Here</string>
</resources>