<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyTheCarImageActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_car_image"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_view_select_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView_select_1"
        android:layout_width="279dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/imageView_select_1"
        android:focusable="true"
        android:onClick="selectedImage1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_select_image"
        app:srcCompat="@drawable/car1" />

    <ImageView
        android:id="@+id/imageView_select_2"
        android:layout_width="277dp"
        android:layout_height="136dp"
        android:clickable="true"
        android:contentDescription="@string/imageView_select_2"
        android:focusable="true"
        android:onClick="selectedImage2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_select_1"
        app:srcCompat="@drawable/car1" />

    <ImageView
        android:id="@+id/imageView_select_3"
        android:layout_width="282dp"
        android:layout_height="136dp"
        android:clickable="true"
        android:contentDescription="@string/imageView_select_3"
        android:focusable="true"
        android:onClick="selectedImage3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_select_2"
        app:srcCompat="@drawable/car1" />

    <Button
        android:id="@+id/button_nxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="submitImage"
        android:text="@string/btn_next"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>