<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvanceLevelActivity">

    <ImageView
        android:id="@+id/imageView_2"
        android:layout_width="253dp"
        android:layout_height="144dp"
        android:contentDescription="@string/imageView_random_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_1"
        app:srcCompat="@drawable/car1" />

    <ImageView
        android:id="@+id/imageView_3"
        android:layout_width="254dp"
        android:layout_height="146dp"
        android:contentDescription="@string/imageView_random_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_2"
        app:srcCompat="@drawable/car1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_advance_level"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_view_points"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_1"
        android:layout_width="253dp"
        android:layout_height="157dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/imageView_random_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/car1" />

    <Button
        android:id="@+id/button_submit_advance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="submitAnswers"
        android:text="@string/btn_submit"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_input_1"
        android:layout_width="117dp"
        android:layout_height="47dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:inputType="textLongMessage"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/imageView_1"
        app:layout_constraintTop_toBottomOf="@+id/textView_points"
        android:hint="@string/hint_1"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText_input_2"
        android:layout_width="117dp"
        android:layout_height="47dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textLongMessage"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/imageView_2"
        app:layout_constraintTop_toBottomOf="@+id/editText_input_1"
        android:hint="@string/hint_2"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText_input_3"
        android:layout_width="117dp"
        android:layout_height="47dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textLongMessage"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_3"
        app:layout_constraintTop_toBottomOf="@+id/editText_input_2"
        android:hint="@string/hint_3"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>