<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_carmake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="356dp"
        android:onClick="identifyTheCarMakeActivity"
        android:text="@string/btn_car_make"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_hints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="hintsActivity"
        android:text="@string/btn_hints"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_carmake" />

    <Button
        android:id="@+id/button_carimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="identifyTheCarImageActivity"
        android:text="@string/btn_car_image"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_hints" />

    <Button
        android:id="@+id/button_advancelevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="advanceLevelActivity"
        android:text="@string/btn_advance_level"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_carimage" />
</androidx.constraintlayout.widget.ConstraintLayout>